# StellarSwap

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  WALLET_INTEGRATION.md
contracts/integration/: Cargo.toml
contracts/integration/test_snapshots/: approve_and_transfer_from.1.json  asymmetric_first_deposit.1.json  burn_reduces_supply.1.json  double_initialize_panics.1.json  fee_to_setter_is_admin_initially.1.json  first_deposit_lp_formula.1.json  invariant_k_never_decreases_50_swaps.1.json  k_grows_after_swaps.1.json  lp_earns_fees_after_swaps.1.json  lp_supply_conservation.1.json  metadata_is_set_correctly.1.json  mint_balance_supply.1.json  pair_exists_false_before_creation.1.json  remove_half_lp_returns_half_reserves.1.json  reserves_match_actual_balances_after_swap.1.json  second_deposit_proportional_lp.1.json  set_fee_to_setter_transfers_role.1.json  set_fee_to_stores_address.1.json  skim_recovers_excess.1.json  swap_exceeds_reserve_panics.1.json  swap_x_for_y_correct_output.1.json  swap_y_for_x.1.json  sync_corrects_direct_donation.1.json  tiny_first_deposit_panics.1.json  transfer_moves_balance.1.json  transfer_over_balance_panics.1.json  update_pair_wasm_hash_by_admin.1.json
contracts/integration/tests/: common.rs  test_factory.rs  test_pair.rs  test_token.rs
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  lib.rs  storage.rs
contracts/token/test_snapshots/contract/test/: test_approve_and_transfer_from.1.json  test_burn.1.json  test_decimals_name_symbol.1.json  test_mint_and_balance.1.json  test_transfer.1.json  test_transfer_insufficient_balance_panics.1.json
docs/: AUDIT.md  (+11 more)
(+101 files in other folders)
