[workspace]
members = [
    "contracts/shared",
    "contracts/factory",
    "contracts/pair",
    "contracts/router",
    "contracts/token",
    "contracts/integration",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "26.0.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
