[package]
name = "stellar-swap-token"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "26.0.1" }
stellar-swap-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
